--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/database_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
