--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -3,3 +3,6 @@ spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
